--- a/TODO
+++ b/TODO
@@ -2,10 +2,10 @@ TODO:
 
 
 PSB
-- step 2, 3, 4
+- step 4
+- report => berdasarkan jenjang, tingkat, jenis kelamin, provinsi, kota, penghasilan orang tua, asal sekolah, has prestasi, has beasiswa
 - jquery ui untuk autocomplete
 - nama lokasi dari database
-- report => berdasarkan jenjang, tingkat, jenis kelamin, provinsi, kota, penghasilan orang tua, asal sekolah, has prestasi, has beasiswa
 
 =================================================
 
